src/index.css
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

body {
  margin: 0;
  font-family: 'Nunito Sans', sans-serif;
  font-weight: 600;
}

/* DARK MODE */
body.dark {
  background-color: hsl(207, 26%, 17%);
}

body.dark *,
body.dark ::placeholder {
  color: hsl(0, 0%, 100%);
}

body.dark header,
body.dark .card,
body.dark button,
body.dark .search,
body.dark input,
body.dark .dropdown-content {
  background-color: hsl(209, 23%, 22%);
}

body.dark header,
body.dark .card,
body.dark .dropbtn,
body.dark .border-country,
body.dark .search,
body.dark .dropdown-content {
  box-shadow: 3px 3px 8px -5px #000;
}

/* LIGHT MODE */
body.light {
  background-color: hsl(0, 0%, 98%);
}

body.light * {
  color: hsl(200, 15%, 8%);
}

body.light header,
body.light .card,
body.light button,
body.light .search,
body.light .dropdown-content {
  background-color: hsl(0, 0%, 100%);
}

body.light input {
  color: hsl(0, 0%, 52%);
}

body.light header,
body.light .card,
body.light .dropbtn,
body.light .border-country,
body.light .search,
body.light .dropdown-content {
  box-shadow: 3px 3px 8px -5px #ccc;
}

/* SPACING */
header * {
  margin: 1em 3em;
}

main {
  padding: 1rem 3rem;
  min-height: 85vh;
}

.flag,
.summary {
  height: 50%;
}

.large,
.info {
  width: 50%;
}

.summary {
  margin: 1rem 1.5rem;
}

.info {
  margin: 0 5em;
}

i {
  margin: auto 0.25rem;
}

h3 {
  margin: 0.5rem auto;
}

table {
  margin-bottom: 3rem;
}

table {
  width: 40vw;
}

/* TYPOGRAPHY */
a {
  text-decoration: none;
  color: inherit;
}

p {
  font-weight: 300;
  margin: 0.5em auto;
}

header > h1 {
  font-size: 16px;
}

.home p {
  font-size: 14px;
}

.details p,
.home h6,
button {
  font-size: 16px;
}

h6,
strong {
  font-weight: 800;
  margin: 0.5rem auto;
}

.attribution { 
  font-size: 11px; 
  text-align: center;
}

/* FLEXBOX */
header,
.countries.home,
.country.details {
  display: flex;
  flex-direction: row;
}

header,
.country.details {
  justify-content: space-between;
}

.countries.home {
  flex-wrap: wrap;
}

.subheader {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

/* CARDS */
.card {
  width: 250px;
  height: 325px;
  margin: 1rem;
  border-radius: 5px;
}

/* OTHER */
.mode:hover,
a:hover,
.region:hover {
  cursor: pointer;
}

.flag {
  margin: 2rem auto;
}

.flag > img {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.flag.large > img {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

/* BUTTON */
button {
  border: none;
  border-radius: 5px;
  padding: 0.5em 1em;
  margin: 0.5em;
}

button.back {
  margin: 3rem auto;
}

button:hover {
  cursor: pointer;
}

/* Search Bar */
input {
  border: none;
}

.search {
  height: 3em;
  width: 15em;
  display: flex;
  align-items: center;
  padding: 0 16px;
  margin: 2rem;
  border-radius: 5px;
}

/* Dropdown Button */
.dropbtn {
  padding: 16px;
  margin: 2rem;
  margin-bottom: 0;
  font-size: 14px;
  border: none;
}

/* Dropdown Container */
.filter {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  min-width: 130px;
  margin: 5.25rem auto;
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content p {
  padding: 0px 16px;
  text-decoration: none;
  display: block;
  font-size: 14px;
}

/* Show dropdown menu on hover */
.filter:hover .dropdown-content { 
  display: block;
}


@media (min-width: 376px) {
  
}

